# affordable-gadgets-backend

./: .dockerignore  .env  .env.example  .env.local.example  .gitignore  ACTUAL_FIX_APPLIED.md  API_ENDPOINTS_REFERENCE.md  APPLY_MIGRATION_0027_WITHOUT_SHELL.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_INDEX.md  BRAND_ASSOCIATION_GUIDE.md  CLOUDINARY_ANALYSIS.md  CLOUDINARY_KEYS_VERIFIED.md  CREDENTIALS_VERIFICATION.md  CRITICAL_FIX_SUMMARY.md  DEPLOYMENT.md  DIAGRAMS_QUICK_START.md  DOCKER.md  DOWNLOAD_DIAGRAMS.md  DUMMY_DATA_GUIDE.md  Dockerfile  FINAL_DIAGNOSIS.md  FINAL_FIX.md  FIX_PENDING_PAYMENT_UNITS.md  FIX_SUMMARY.md  FRONTEND_PAYMENT_INTEGRATION.md  HOW_TO_FIND_CLOUDINARY_CREDENTIALS.md  IMAGE_404_SOLUTION.md  IMAGE_DISPLAY_FIX.md  IMAGE_DISPLAY_SOLUTION.md  LOCAL_DEVELOPMENT.md  MULTI_APP_DEPLOYMENT.md  PAYMENT_FAILURE_TROUBLESHOOTING.md  PAYMENT_INITIATION_ERROR_DIAGNOSIS.md  PAYMENT_REDIRECT_ISSUE_ANALYSIS.md  PRODUCTION_CHECKLIST.md  PRODUCTION_SETUP_SUMMARY.md  PROMOTIONS_IMPLEMENTATION_GUIDE.md  PROMOTION_IMAGE_SUMMARY.md  Procfile  (+80 more)
deploy/: README.md  deploy-gcp.sh  last-deploy.txt  ngrok-on-vm.sh  vm-control.sh
docs/: CLEANUP_SUMMARY.md  ENV_AND_DEPLOY.md  RAILWAY_KEEP_WARM.md  README.md  VERCEL_AND_NGROK_ENV_CHECKLIST.md
inventory/: admin.py  apps.py  cloudinary_utils.py  feeds.py  middleware.py  models.py  permissions.py  reports.py  serializers.py  serializers_public.py  signals.py  urls.py  urls_public.py  views.py  views_public.py
scripts/: README_IMPORT.md  check_cold_start.py  cleanup_products.py  empty_database.py  generate-openapi.sh  (+4 more)
(+234 files in other folders)
