[project]
name = "affordable-gadgets-backend"
version = "0.1.0"
description = "Django REST API for Affordable Gadgets e-commerce"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["venv", ".git", "migrations", "__pycache__", "build", "dist", "scripts/adhoc"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
